--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="nav">
+        <img src="" alt="">
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </div>
+    <div class="header">
+        <div class="hero">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that foes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button>Sign up</button>
+        </div>
+        <img src="" alt="">
+    </div>
+    <div class="content">
+        <h2>Some random information.</h2>
+        <div class="cards">
+            <div class="card">
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
