--- a/index.html
+++ b/index.html
@@ -44,5 +44,17 @@
             </div>
         </div>
     </div>
+    <div class="quote">
+        <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+        <strong>-Thor, God of Thunder</strong>
+    </div>
+    <div class="signup">
+        <div class="signup-left">
+            <strong>Call to action! It's time!</strong>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
 </html>
