--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="nav">
-        <img src="" alt="">
+        <a href="index.html"><img src="img/film-spool.jpg" alt="Kinoplex logo"></a>
         <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
         </ul>
     </div>
     <div class="header">
