Style hero section
Changed the color and resized all of all the text, changed the
background color and rounded the borders on the button, added an image
of happy theatergoers, and used flexbox to place the image beside the
text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="nav">
-        <a href="index.html"><img src="img/film-spool.jpg" alt="Kinoplex logo"></a>
+        <a href="index.html"><img src="img/film-spool.jpg" alt="Retro plastic bobbin with film"></a>
         <ul>
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
@@ -17,11 +17,13 @@
     </div>
     <div class="header">
         <div class="hero">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that foes here under the main title. It's a smaller font and the color is lower contrast.</p>
-            <button>Sign up</button>
+            <p class="hero-text">Welcome to the Kinoplex</p>
+            <p class="hero-subtext">The greatest theatergoing experience the world has ever seen!</p>
+            <button>Purchase Tickets</button>
         </div>
-        <img src="" alt="">
+        <div class="main-image">
+            <img src="img/watching-movie.jpg" alt="Friends Watching a Movie">
+        </div>
     </div>
     <div class="content">
         <h2>Some random information.</h2>
