Fix styling on nav and hero
Changed pixel padding to percentage and changed hero section to space
the flex containers further from the edges.

--- a/index.html
+++ b/index.html
@@ -21,27 +21,33 @@
             <p class="hero-subtext">The greatest theatergoing experience the world has ever seen!</p>
             <button>Purchase Tickets</button>
         </div>
-        <div class="main-image">
-            <img src="img/watching-movie.jpg" alt="Friends Watching a Movie">
-        </div>
+        <img src="img/watching-movie.jpg" alt="Friends Watching a Movie">
     </div>
     <div class="content">
-        <h2>Some random information.</h2>
+        <p class="info-header">Some random information.</p>
         <div class="cards">
             <div class="card">
-                <img src="" alt="">
+                <div class="movie-poster">
+                    <img src="" alt="">
+                </div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <img src="" alt="">
+                <div class="movie-poster">
+                    <img src="" alt="">
+                </div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <img src="" alt="">
+                <div class="movie-poster">
+                    <img src="" alt="">
+                </div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <img src="" alt="">
+                <div class="movie-poster">
+                    <img src="" alt="">
+                </div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
