Style content section
Centered heading, arranged cards with flexbox, added images with
borders, and added titles and descriptions to films.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="nav">
         <a href="index.html"><img src="img/film-spool.jpg" alt="Retro plastic bobbin with film"></a>
         <ul>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
+            <li><a href="#">Locations</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">About</a></li>
         </ul>
     </div>
     <div class="header">
@@ -24,31 +24,35 @@
         <img src="img/watching-movie.jpg" alt="Friends Watching a Movie">
     </div>
     <div class="content">
-        <p class="info-header">Some random information.</p>
+        <p class="info-header">Now Showing</p>
         <div class="cards">
             <div class="card">
                 <div class="movie-poster">
-                    <img src="" alt="">
+                    <img src="img/doll.jpeg" alt="Brown Purple Red Knitted Doll">
                 </div>
-                <p>this is some subtext under an illustration or image</p>
+                <p class="movie-title">Doll Problems</p>
+                <p>A doll has an existential crisis</p>
             </div>
             <div class="card">
                 <div class="movie-poster">
-                    <img src="" alt="">
+                    <img src="img/fedora.jpeg" alt="Person in Gray Coat Holding Black Hat">
                 </div>
-                <p>this is some subtext under an illustration or image</p>
+                <p class="movie-title">Bomb Maker</p>
+                <p>A scientist builds a bomb</p>
             </div>
             <div class="card">
                 <div class="movie-poster">
-                    <img src="" alt="">
+                    <img src="img/house.jpeg" alt="Brown Concrete Castle">
                 </div>
-                <p>this is some subtext under an illustration or image</p>
+                <p class="movie-title">Haunted House</p>
+                <p>A family buys a haunted house</p>
             </div>
             <div class="card">
                 <div class="movie-poster">
-                    <img src="" alt="">
+                    <img src="img/soldier.jpg" alt="Soldier Giving Red Fruit on 2 Children during Daytime">
                 </div>
-                <p>this is some subtext under an illustration or image</p>
+                <p class="movie-title">Save the Children</p>
+                <p>A soldier saves children from kidnappers</p>
             </div>
         </div>
     </div>
