--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </div>
     </div>
     <div class="quote">
-        <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
-        <strong>-Thor, God of Thunder</strong>
+        <p class="quote-text">Best crab legs in the west!</p>
+        <p class="quote-attribution">-Robert, Manager</p>
     </div>
     <div class="signup">
         <div class="signup-left">
