Style signup section
Added margins and padding, rounded the border, changed text color and
heading text size, and arranged it with flexbox

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     </div>
     <div class="signup">
         <div class="signup-left">
-            <strong>Call to action! It's time!</strong>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <p class="signup-head">Sign up for our newsletter!</p>
+            <p class="signup-content">See all the new films coming soon to a Kinoplex near you!</p>
         </div>
         <button>Sign up</button>
     </div>
