--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
         </div>
         <button>Sign up</button>
     </div>
-    <div class="footer">Copyright © The Odin Project 2021</div>
+    <div class="footer">Copyright © Kinoplex 2023</div>
 </body>
 </html>
